k8/keycloak.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  serviceName: "keycloak"
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: keycloak/keycloak:25.0.6
          command:
            - /opt/keycloak/bin/kc.sh
            - start-dev
            - --import-realm
          ports:
            - containerPort: 8080
            - containerPort: 9000
          volumeMounts:
            - name: keycloak-import
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: keycloak-import
          hostPath:
            path: __PROJECT_BASE_PATH__/keycloak/import
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: management
  type: ClusterIP
