k8/mailcatcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailcatcher
  labels:
    app: mailcatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailcatcher
  template:
    metadata:
      labels:
        app: mailcatcher
    spec:
      containers:
        - name: mailcatcher
          image: schickling/mailcatcher
          ports:
            - containerPort: 1080
            - containerPort: 1025
---
apiVersion: v1
kind: Service
metadata:
  name: mailcatcher
  labels:
    app: mailcatcher
spec:
  selector:
    app: mailcatcher
  ports:
    - protocol: TCP
      port: 1080
      targetPort: 1080
      name: http
    - protocol: TCP
      port: 1025
      targetPort: 1025
      name: smtp
  type: ClusterIP
