k8/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-management-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app
            port:
              number: 8080
      # - path: /config(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: config-server
      #       port:
      #         number: 4566
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /keycloak(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              number: 8081 # Using the http port for Keycloak
      - path: /mails(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mailcatcher
            port:
              number: 1080
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus
            port:
              number: 9090
